syntax = "proto3";

option go_package = "./book";

package book;

service BookService {
  rpc CreateBook(CreateBookReq) returns (CreateBookRes);
  rpc ReadBook(ReadBookReq) returns (ReadBookRes);
  rpc UpdateBook(UpdateBookReq) returns (UpdateBookRes);
  rpc DeleteBook(DeleteBookReq) returns (DeleteBookRes);
  rpc ListBooks(ListBooksReq) returns (stream ListBooksRes);
}

message Book {
  string id = 1;
  string title = 2;
  string description = 3;
}

message CreateBookReq {
  Book book = 1; // Book id blank
}

message CreateBookRes {
  Book book = 1; // Book id filled in
}

message UpdateBookReq {
  Book book = 1; // Book id blank
}

message UpdateBookRes {
  Book book = 1; // Book id filled in
}

message ReadBookReq {
  string id = 1;
}

message ReadBookRes {
  Book book = 1;
}

message DeleteBookReq {
  string id = 1;
}

message DeleteBookRes {
  bool success = 1;
}

message ListBooksReq {}

message ListBooksRes {
  Book book = 1;
}